Issue lists & jump to issue location

--- a/InfoSupport.StaticCodeAnalyzer.WebApp/wwwroot/css/tailwind.css
+++ b/InfoSupport.StaticCodeAnalyzer.WebApp/wwwroot/css/tailwind.css
@@ -1905,6 +1905,11 @@ html {
   display: none;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-full {
   height: 100%;
 }
@@ -2014,6 +2019,10 @@ html {
   padding: 0.25rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-8 {
   padding: 2rem;
 }
@@ -2034,6 +2043,11 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .shadow-xl {
